# ptm2-sky

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ptm2-sky.code-workspace
backend/: README.md  alembic.ini  config.py  example2.db  launch.py  localhost+2-key.pem  localhost+2.pem  main.py  pyproject.toml  test_ai.py
backend/ai/: generator.py  get_promt.py  run_llama.py  run_open_ai.py
backend/ai/promts/: step-actions.md  step-data-output.md  (+6 more)
backend/ai_gen/: full_task.py
backend/ai_promts/: magic_task_promt.md  mok_result.json  subtask.promt.md
backend/alembic/: env.py
backend/database/: create_task.py  create_tasl.py  db_get_all_filters.py  db_get_all_queries.py  db_get_filters.py  db_get_tasks.py  db_remove_filter.py  db_remove_query.py  db_remove_task.py  db_upsert_filter.py  db_upsert_query.py  db_upsert_task.py  get_filters.py  get_queries.py  get_tasks.py  get_tasks2.py  initial__db.py  initial_data.json  remove_task.py  sqlalchemy_tables.py  update_task.py  write_query.py  write_task.py
backend/routers/: api_router.py  auth_router.py  filter_router.py  mok_result.json  mok_subtasks.md  parser_metadata_router.py  query_router.py  task_router.py  websocket.py  websocket_utils.py  ws_response_and_status.py
backend/schemas/: types_auth.py  types_filters.py  types_get_filters.py  types_get_tasks.py  types_metadata.py  types_new_task.py  types_queries.py  types_tasks.py  types_update_task.py  types_write_task.py
backend/serializers/: returned_query.py  returned_task.py  returned_user.py
backend/utils/: parser_metadata.py
(+206 files in other folders)
