[project]
name = "ptm2-sky-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "httpx[http2]>=0.28.1",
    "llama-cpp-python>=0.3.8",
    "openai>=1.77.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
